--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ avatar: https://avatars1.githubusercontent.com/u/77027628?s=400&u=b5d77be597d256
 footer-links:
   # dribbble: relaxyourmindrelaxingmusic
   youtube: channel/UCMcqkxvaRHYSMn8RkLq_E-A # channel/<your_long_string> or user/<user-name>
-  email: relaxyourmindrelaxingmusic@gmai.com
+  email: relaxyourmindrelaxingmusic@gmail.com
   facebook: relaxyourmindrelaxingmusic
   # flickr: relaxyourmindrelaxingmusic
   github: relaxyourmindrelaxingmusic
